add Swagger wishlisst
