# storage/api-docs/api-docs.json
@@ -133,6 +133,12 @@
                         "required": false
                     },
                     {
+                        "name": "qq",
+                        "in": "query",
+                        "description": "Tìm kiếm tách chuỗi ",
+                        "required": false
+                    },
+                    {
                         "name": "status",
                         "in": "query",
                         "description": "Lọc theo trạng thái ",
@@ -399,6 +405,12 @@
                         "required": false
                     },
                     {
+                        "name": "qq",
+                        "in": "query",
+                        "description": "Tìm kiếm  tách chuỗi",
+                        "required": false
+                    },
+                    {
                         "name": "sortBy",
                         "in": "query",
                         "description": "Lọc theo chiều asc hoặc desc ",
@@ -407,7 +419,7 @@
                     {
                         "name": "postHot",
                         "in": "query",
-                        "description": "Bài viết tuyển dụng hot,nổi bật (postHot='hot' list bài viết  hot, nổi bật ,\n     *         postHot='normal' list  bài viết bthuong",
+                        "description": "Bài viết tuyển dụng hot,nổi bật (postHot='hot' list bài viết  hot, nổi bật ,\r\n     *         postHot='normal' list  bài viết bthuong",
                         "required": false
                     },
                     {
@@ -419,7 +431,7 @@
                     {
                         "name": "post",
                         "in": "query",
-                        "description": "  post='post-contest' -> bài viết thuộc cuộc thi\n     *         post='post-capacity' -> bài viết thuộc test nl .\n     *         post='post-round' -> bài viết thuộc vòng thi .\n     *          post='post-recruitment' -> bài viết thuộc tuyển dụng\n     * ",
+                        "description": "  post='post-contest' -> bài viết thuộc cuộc thi\r\n     *         post='post-capacity' -> bài viết thuộc test nl .\r\n     *         post='post-round' -> bài viết thuộc vòng thi .\r\n     *          post='post-recruitment' -> bài viết thuộc tuyển dụng\r\n     * ",
                         "required": false
                     },
                     {
@@ -550,6 +562,12 @@
                         "name": "keyword",
                         "in": "query",
                         "description": "Tìm kiếm ",
+                        "required": false
+                    },
+                    {
+                        "name": "qq",
+                        "in": "query",
+                        "description": "Tìm kiếm tách chuỗi ",
                         "required": false
                     },
                     {
@@ -1464,6 +1482,119 @@
                         "bearer_token": []
                     }
                 ]
+            }
+        },
+        "api/v1/wishlist/add": {
+            "post": {
+                "tags": [
+                    "WishLish",
+                    "Api V1"
+                ],
+                "summary": "Authorization",
+                "description": "Thêm lưu trữ,  Dẩy  type : 'contest' hoặc 'post'    , id : number",
+                "operationId": "1289b8e48edb2e4decad813892dd0ec0",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "id": {
+                                        "type": "number"
+                                    },
+                                    "type": {
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "{ status: true , data : data }"
+                    },
+                    "404": {
+                        "description": "{ status: false , message : 'Not found' }"
+                    }
+                },
+                "security": [
+                    {
+                        "bearer_token": []
+                    }
+                ]
+            }
+        },
+        "api/v1/wishlist/remove": {
+            "post": {
+                "tags": [
+                    "WishLish",
+                    "Api V1"
+                ],
+                "summary": "Authorization",
+                "description": "Xóa lưu trữ ,  Dẩy  type : 'contest' hoặc 'post'    , id : number",
+                "operationId": "5dcfb343de2b738189bf227b0d114c06",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "id": {
+                                        "type": "number"
+                                    },
+                                    "type": {
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "{ status: true , data : data }"
+                    },
+                    "404": {
+                        "description": "{ status: false , message : 'Not found' }"
+                    }
+                },
+                "security": [
+                    {
+                        "bearer_token": []
+                    }
+                ]
+            }
+        },
+        "api/v1/wishlist/user": {
+            "get": {
+                "tags": [
+                    "WishLish",
+                    "Api V1"
+                ],
+                "description": "Danh sách lưu trữ",
+                "operationId": "7dd22da5f0c18a86757288d3d8811a9f",
+                "parameters": [
+                    {
+                        "name": "type",
+                        "in": "query",
+                        "description": "Thể loại contest hoặc post ",
+                        "required": false
+                    },
+                    {
+                        "name": "key",
+                        "in": "query",
+                        "description": "Nếu type = contest thì nhập key , key = 0 là contest , key= 1 là capacity"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{ status: true , data : data }"
+                    },
+                    "404": {
+                        "description": "{ status: false , message : 'Not found' }"
+                    }
+                }
             }
         }
     },
